Fixed packet length for frame type 8
Fixed packet length for frame type 8

--- a/bit-version/linux/makefile
+++ b/bit-version/linux/makefile
@@ -1,6 +1,8 @@
 
 uresat-decoder-linux-x86: main.c genesis_crc.c genesis_scrambler.c *.h
-	cc -g  -o uresat-decoder-linux-x86 *.c -fsanitize=address -fno-omit-frame-pointer -lm
+	cc -g  -o uresat-decoder-linux-x86 *.c -static -fno-omit-frame-pointer -lm
+#        cc -g  -o uresat-decoder-linux-x86 *.c -fsanitize=address -fno-omit-frame-pointer -lm
+
 clean:
 	rm -f uresat-decoder-linux-x86
 
